Add frontend hotel booking pages and API integration
- Created hotel-api.js for backend communication
- Added hotel-results.html with search results, filters, and sorting
- Added hotel-details.html with gallery, amenities, and room selection
- Added hotel-booking.html with guest details form
- Added booking-confirmation.html with success page
- Created hotel-booking.css with complete styling
- Updated main.js to redirect hotel search to results page
- Connected frontend with Flask backend via session storage

--- a/index.html
+++ b/index.html
@@ -928,6 +928,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- Supabase Configuration -->
     <script src="js/supabase-config.js"></script>
+    <!-- Hotel API Service -->
+    <script src="js/hotel-api.js"></script>
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
 </body>
