--- a/index.html
+++ b/index.html
@@ -101,6 +101,34 @@
         </nav>
     </header>
 
+    <!-- Trust Badges Bar -->
+    <div class="trust-badges-bar">
+        <div class="container">
+            <div class="trust-badges">
+                <div class="trust-badge">
+                    <i class="fas fa-hotel"></i>
+                    <span><strong>10,000+</strong> Hotels</span>
+                </div>
+                <div class="trust-badge">
+                    <i class="fas fa-tag"></i>
+                    <span><strong>Best Price</strong> Guarantee</span>
+                </div>
+                <div class="trust-badge">
+                    <i class="fas fa-headset"></i>
+                    <span><strong>24/7</strong> Support</span>
+                </div>
+                <div class="trust-badge">
+                    <i class="fas fa-shield-alt"></i>
+                    <span><strong>Secure</strong> Booking</span>
+                </div>
+                <div class="trust-badge">
+                    <i class="fas fa-undo"></i>
+                    <span><strong>Free</strong> Cancellation</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Full Page Slider -->
     <main class="fullpage-wrapper" id="fullpageWrapper">
 
@@ -139,8 +167,39 @@
                 <button class="slider-arrow next" id="nextSlide"><i class="fas fa-chevron-right"></i></button>
             </div>
 
+            <!-- Scroll Down Indicator -->
+            <a href="#flights" class="scroll-indicator" id="scrollIndicator">
+                <div class="scroll-mouse">
+                    <div class="scroll-wheel"></div>
+                </div>
+                <span>Scroll to Explore</span>
+            </a>
+
             <!-- Search Box -->
             <div class="search-box-container">
+                <!-- Trending Destinations Quick Select -->
+                <div class="destination-pills">
+                    <span class="pills-label"><i class="fas fa-fire"></i> Trending:</span>
+                    <button class="dest-pill" data-destination="Goa" data-region-id="6050530">
+                        <i class="fas fa-umbrella-beach"></i> Goa
+                    </button>
+                    <button class="dest-pill" data-destination="Manali" data-region-id="6057042">
+                        <i class="fas fa-mountain"></i> Manali
+                    </button>
+                    <button class="dest-pill" data-destination="Jaipur" data-region-id="6054412">
+                        <i class="fas fa-landmark"></i> Jaipur
+                    </button>
+                    <button class="dest-pill" data-destination="Dubai" data-region-id="2114">
+                        <i class="fas fa-city"></i> Dubai
+                    </button>
+                    <button class="dest-pill" data-destination="Maldives" data-region-id="282">
+                        <i class="fas fa-water"></i> Maldives
+                    </button>
+                    <button class="dest-pill" data-destination="Singapore" data-region-id="70">
+                        <i class="fas fa-building"></i> Singapore
+                    </button>
+                </div>
+
                 <div class="search-tabs">
                     <button class="search-tab active" data-tab="flights">
                         <i class="fas fa-plane"></i>
@@ -922,6 +981,32 @@
             </form>
         </div>
     </div>
+
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-bottom-nav">
+        <div class="nav-items">
+            <a href="#home" class="nav-item active">
+                <i class="fas fa-home"></i>
+                <span>Home</span>
+            </a>
+            <a href="#flights" class="nav-item">
+                <i class="fas fa-plane"></i>
+                <span>Flights</span>
+            </a>
+            <a href="#hotels" class="nav-item">
+                <i class="fas fa-hotel"></i>
+                <span>Hotels</span>
+            </a>
+            <a href="#deals" class="nav-item">
+                <i class="fas fa-percent"></i>
+                <span>Offers</span>
+            </a>
+            <a href="#" class="nav-item" id="mobileProfileBtn">
+                <i class="fas fa-user"></i>
+                <span>Profile</span>
+            </a>
+        </div>
+    </nav>
 
     <!-- Scripts -->
     <!-- Supabase Client Library -->
