feat: Complete Razorpay Payment Gateway Integration
✨ New Features:
- Razorpay payment service (order creation, verification, refunds)
- Payment checkout and success pages
- Book Now buttons with direct payment flow
- ₹1 test hotel for payment verification
- Admin panel authentication
- HotelBeds API integration

🔧 Backend Updates:
- razorpay_service.py: Full payment processing
- payment_routes.py: Payment API endpoints
- admin_service.py: JWT authentication
- config.py: Razorpay credentials support

🎨 Frontend Updates:
- payment-checkout.html: Professional checkout page
- payment-success.html: Confirmation page
- hotel-results.js: bookHotel() function added

🔒 Security:
- .gitignore: Protects API keys and .env
- .env.example: Template for credentials
- Payment signature verification (HMAC SHA-256)

✅ Tested and working with real Razorpay keys

--- a/admin/login.html
+++ b/admin/login.html
@@ -479,7 +479,7 @@
             }
         }
 
-        function handleLogin(e) {
+        async function handleLogin(e) {
             e.preventDefault();
 
             const email = document.getElementById('email').value;
@@ -494,27 +494,39 @@
             loginBtn.classList.add('loading');
             loginBtn.querySelector('span').textContent = 'Signing In...';
 
-            // Simulate login (replace with actual API call)
-            setTimeout(() => {
-                // Demo credentials: admin@ctcjourneys.com / admin123
-                if (email === 'admin@ctcjourneys.com' && password === 'admin123') {
-                    // Set auth token
-                    localStorage.setItem('admin_token', 'demo_token_' + Date.now());
-                    localStorage.setItem('admin_user', JSON.stringify({
-                        name: 'Super Admin',
-                        email: email,
-                        role: 'admin'
-                    }));
+            try {
+                // Real API call
+                const response = await fetch('/api/admin/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ email, password })
+                });
+
+                const data = await response.json();
+
+                if (data.success) {
+                    // Save auth token
+                    localStorage.setItem('admin_token', data.data.token);
+                    localStorage.setItem('admin_user', JSON.stringify(data.data.user));
 
                     // Redirect to dashboard
                     window.location.href = 'dashboard.html';
                 } else {
                     // Show error
+                    errorMessage.querySelector('span').textContent = data.error || 'Invalid email or password';
                     errorMessage.classList.add('show');
                     loginBtn.classList.remove('loading');
                     loginBtn.querySelector('span').textContent = 'Sign In';
                 }
-            }, 1500);
+            } catch (error) {
+                console.error('Login error:', error);
+                errorMessage.querySelector('span').textContent = 'Connection error. Please try again.';
+                errorMessage.classList.add('show');
+                loginBtn.classList.remove('loading');
+                loginBtn.querySelector('span').textContent = 'Sign In';
+            }
         }
 
         // Check if already logged in
