--- a/auth.html
+++ b/auth.html
@@ -298,6 +298,7 @@
         .password-toggle {
             position: absolute;
             right: 14px;
+            left: auto;
             top: 50%;
             transform: translateY(-50%);
             background: none;
@@ -305,6 +306,7 @@
             cursor: pointer;
             color: #94a3b8;
             padding: 4px;
+            z-index: 10;
         }
 
         .password-toggle:hover {
